...
        item.selectedSegmentIndex = 0
        item.translatesAutoresizingMaskIntoConstraints = false
        item.addTarget(self, action: #selector(indexChanged(_:)), for: .valueChanged)
        return item
    }()

    private lazy var tableView: UITableView = {
        let item = UITableView()
        item.accessibilityIdentifier = "tableView"
        item.translatesAutoresizingMaskIntoConstraints = false
        item.delegate = self
        item.dataSource = self
        item.register(
...
